--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <body>
     <h3 class="container text-center">Mobile World</h3>
     <!-- input field -->
-    <div class="input-group mb-3 w-50 mx-auto">
-        <input id="input-field" type="text" class="form-control" placeholder="Input mobile name"
+    <div class="input-group mb-3 ">
+        <input id="input-field" type="text" class="form-control " placeholder="Input mobile name"
             aria-label="Recipient's username" aria-describedby="basic-addon2">
-        <span onclick="getMobileData()" class="input-group-text" id="basic-addon2">Click here</span>
+        <span onclick="getMobileData()" class="input-group-text " id="basic-addon2">Click here</span>
     </div>
 
     <!-- display mobile field -->
