--- a/index.html
+++ b/index.html
@@ -22,7 +22,18 @@
         <span onclick="getMobileData()" class="input-group-text " id="basic-addon2">Click here</span>
     </div>
 
-    <!-- display mobile field -->
+    <!-- spinner -->
+    <div class="spinner-border" id="spinner" role="status">
+        <span class="sr-only"></span>
+    </div>
+
+    <!-- display single mobile phone details -->
+    <div class="container mb-3" id="single-Mobile">
+
+    </div>
+
+
+    <!-- display all mobile field -->
     <div class="container">
         <div class="row" id="display-mobile">
 
