--- a/index.html
+++ b/index.html
@@ -14,17 +14,16 @@
 </head>
 
 <body>
-    <h3 class="container text-center">Mobile World</h3>
+    <h3 class="container text-center mt-4 text_color fw-bold">Mobile Paradise</h3>
     <!-- input field -->
     <div class="input-group mb-3 ">
-        <input id="input-field" type="text" class="form-control " placeholder="Input mobile name"
-            aria-label="Recipient's username" aria-describedby="basic-addon2">
-        <span onclick="getMobileData()" class="input-group-text " id="basic-addon2">Click here</span>
+        <input id="input-field" type="text" class="form-control " placeholder="Input mobile name">
+        <span onclick="getMobileData()" class="input-group-text " id="button-color">Click here</span>
     </div>
 
     <!-- error massage -->
     <div class="text-center" id="error-massage">
-        <p>Not found</p>
+        <p class="text-danger">Data not found!Please search again.</p>
     </div>
 
     <!-- spinner -->
