--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile World</title>
+
     <!-- css style added -->
     <link rel="stylesheet" href="./css/style.css">
+
     <!-- bootstrap link added -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -47,6 +49,7 @@
         </div>
     </div>
 
+    <!-- external javascipt link -->
     <script src="./js/style.js"></script>
 </body>
 
