--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
     <!-- display all mobile field -->
     <div class="container" id="all-mobile">
         <div class="row" id="display-mobile">
+            <div class="col-lg-4">
+
+            </div>
 
         </div>
     </div>
