search butto name changen

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- input field -->
     <div class="input-group mb-3 ">
         <input id="input-field" type="text" class="form-control " placeholder="Input mobile name">
-        <span onclick="getMobileData()" class="input-group-text " id="button-color">Click here</span>
+        <span onclick="getMobileData()" class="input-group-text " id="button-color">Search</span>
     </div>
 
     <!-- error massage -->
