button add,input focus remove  and title color change

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 
 <body>
     <main>
-        <h3 class="container text-center mt-4 text_color fw-bold">Mobile Paradise</h3>
+        <h3 class="container text-center mt-4 text_color fw-bold">
+            Mobile <span class="paradise-text">Paradise</span> </h3>
         <!-- input field -->
         <div class="input-group mb-3 ">
             <input id="input-field" type="text" class="form-control " placeholder="Input mobile name">
-            <span onclick="getMobileData()" class="input-group-text " id="button-color">Search</span>
+            <button onclick="getMobileData()" class="input-group-text " id="button-color"> Search</button>
+            <!-- <span >Search</span> -->
         </div>
 
         <!-- error massage -->
